<resources>
    <string name="app_name">Lista de Tarefas</string>
    <string name="BC">Breno Cardoso</string>
    <string name="login">LOGIN</string>
    <string name="e_mail">E-mail:</string>
    <string name="insira_o_seu_e_mail">Insira o seu e-mail:</string>
    <string name="senha">Senha:</string>
    <string name="insira_a_sua_senha">Insira a sua senha:</string>
    <string name="esqueci_a_senha"><u>Esqueci a senha!</u></string>
    <string name="criar_conta"><u>Criar conta!</u></string>
    <string name="realizar_login">Realizar login</string>
    <string name="signin">SignIn</string>
    <string name="j_tem_conta">Já tem conta!</string>
    <string name="realizar_cadastro">Realizar cadastro</string>
    <string name="repetir_senha">Repetir senha:</string>
    <string name="repita_a_sua_senha">Repita a sua senha:</string>
    <string name="realizar_logout">Realizar logout</string>
    <string name="adicionar_tarefa">Adicionar tarefa</string>
    <string name="adicionar_nova_tarefa">Adicionar Nova Tarefa</string>
    <string name="titulo_da_tarefa">Titulo da tarefa:</string>
    <string name="resumo_da_tarefa">Resumo da tarefa:</string>
    <string name="descri_o_da_tarefa">Descrição da tarefa:</string>
    <string name="status_da_tarefa">Status da tarefa:</string>
    <string name="data_da_tarefa">Data da tarefa:</string>
    <string name="insira_o_titulo">Insira o titulo</string>
    <string name="insira_o_resumo">Insira o resumo</string>
    <string name="insira_a_descricao">Insira a descrição</string>
    <string name="em_atraso">Em atraso</string>
    <string name="nao_finalizado">Não finalizado</string>
    <string name="finalizado">Finalizado</string>
    <string name="cancel">cancelar</string>
    <string name="Add">Adicionar</string>
    <string name="insira_a_data">Insira a data:</string>
    <string name="titulo">Titulo:</string>
    <string name="resumo">Resumo:</string>
    <string name="data">Data:</string>
    <string name="visualizar_tarefa">Visualizar Tarefa</string>
    <string name="editar">Editar</string>
    <string name="deletar">Deletar</string>
</resources>